Fix postgres migration, cloudinary issues related to databse migration and csrf token issues related to db migration

--- a/trainers/templates/trainers/trainers.html
+++ b/trainers/templates/trainers/trainers.html
@@ -17,10 +17,10 @@
         <div class="col-md-6 col-lg-4 text-center">
             <!-- Display the single trainer's card -->
             <div class="card">
-                <img src="{{ trainers.0.featured_image.url }}" class="card-img-top rounded-circle image-pos"
-                    alt="{{ trainers.0.first_name }} {{ trainers.0.last_name }}"
+                20 <img src="{{ trainer.featured_image.url }}" class="card-img-top rounded-circle image-pos" 21
+                    alt="{{ trainers.0.first_name }} {{ trainers.0.last_name }}" 22
                     style="width: 150px; height: 150px; object-fit: cover; margin: 0 auto;">
-                <div class="card-body">
+                23 <div class="card-body">
                     <h5 class="card-title">{{ trainers.0.first_name }} {{ trainers.0.last_name }}</h5>
                     <p class="card-text"><strong>Age:</strong> {{ trainers.0.age }}</p>
                     <p class="card-text">{{ trainers.0.description }}</p>
